# FluidSim2D

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
include/: scenes.h  utils.h
include/scenes/: paint.h  pressurebox.h  windtunnel.h
libs/: CMakeLists.txt
shaders/: addDye.comp  advectDye.comp  advectVelocity.comp  applyForces.comp  applyPressure.comp  calcDivergence.comp  clear.comp  displayVelocity.comp  extrapolateU.comp  extrapolateV.comp  projectPressure.comp  shader.comp
src/: main.cpp  scenes.cpp  utils.cpp
src/scenes/: paint.cpp  pressurebox.cpp  windtunnel.cpp
